# stemmer

./: LICENSE  pyproject.toml
