[tool.poetry]
name = "stemmer"
version = "0.0.1"
description = "Audio source separation implementation"
authors = ["Andreas Stassivik <andreas@stassi.net>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "~2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
