[tool.poetry]
name = "stemmer"
version = "0.0.1"
description = "Audio source separation implementation"
authors = ["Andreas Stassivik <andreas@stassi.net>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
spleeter = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
